Finished roberta model code

--- a/Smaller Models/roberta.ipynb
+++ b/Smaller Models/roberta.ipynb
@@ -244,11 +244,308 @@
         "print(\"batch attention_mask:\", tuple(batch_attention_mask.shape))\n",
         "print(\"batch labels:\", tuple(batch_labels.shape))\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Define the multi‑column RoBERTa model (column‑level self‑attention)\n",
+        "\n",
+        "This cell defines a model that:\n",
+        "- Runs RoBERTa on **all columns in one batched forward pass** (faster than looping columns)\n",
+        "- Treats the resulting per‑column embeddings as a short sequence and applies **self‑attention across columns**\n",
+        "- Pools across columns and predicts `experience_level`.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class ColumnSelfAttentionBlock(nn.Module):\n",
+        "    def __init__(self, hidden_size: int, num_heads: int, dropout: float):\n",
+        "        super().__init__()\n",
+        "        self.mha = nn.MultiheadAttention(\n",
+        "            embed_dim=hidden_size,\n",
+        "            num_heads=num_heads,\n",
+        "            dropout=dropout,\n",
+        "            batch_first=True,\n",
+        "        )\n",
+        "        self.ln1 = nn.LayerNorm(hidden_size)\n",
+        "        self.ff = nn.Sequential(\n",
+        "            nn.Linear(hidden_size, hidden_size * 4),\n",
+        "            nn.GELU(),\n",
+        "            nn.Dropout(dropout),\n",
+        "            nn.Linear(hidden_size * 4, hidden_size),\n",
+        "        )\n",
+        "        self.ln2 = nn.LayerNorm(hidden_size)\n",
+        "        self.drop = nn.Dropout(dropout)\n",
+        "\n",
+        "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+        "        attn_out, _ = self.mha(x, x, x, need_weights=False)\n",
+        "        x = self.ln1(x + self.drop(attn_out))\n",
+        "        ff_out = self.ff(x)\n",
+        "        x = self.ln2(x + self.drop(ff_out))\n",
+        "        return x\n",
+        "\n",
+        "\n",
+        "class MultiColumnRobertaClassifier(nn.Module):\n",
+        "    def __init__(\n",
+        "        self,\n",
+        "        model_name: str,\n",
+        "        num_columns: int,\n",
+        "        num_labels: int,\n",
+        "        col_attn_heads: int = 4,\n",
+        "        dropout: float = 0.1,\n",
+        "    ):\n",
+        "        super().__init__()\n",
+        "        self.encoder = RobertaModel.from_pretrained(model_name)\n",
+        "        hidden = int(self.encoder.config.hidden_size)\n",
+        "\n",
+        "        self.col_pos = nn.Embedding(num_columns, hidden)\n",
+        "        self.col_block = ColumnSelfAttentionBlock(hidden, col_attn_heads, dropout)\n",
+        "\n",
+        "        self.classifier = nn.Sequential(\n",
+        "            nn.Dropout(dropout),\n",
+        "            nn.Linear(hidden, hidden // 2),\n",
+        "            nn.GELU(),\n",
+        "            nn.Dropout(dropout),\n",
+        "            nn.Linear(hidden // 2, num_labels),\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, input_ids: torch.Tensor, attention_mask: torch.Tensor) -> torch.Tensor:\n",
+        "        b, c, l = input_ids.shape\n",
+        "\n",
+        "        flat_ids = input_ids.view(b * c, l)\n",
+        "        flat_mask = attention_mask.view(b * c, l)\n",
+        "\n",
+        "        out = self.encoder(input_ids=flat_ids, attention_mask=flat_mask)\n",
+        "        cls = out.last_hidden_state[:, 0, :]\n",
+        "        cols = cls.view(b, c, -1)\n",
+        "\n",
+        "        pos = self.col_pos(torch.arange(c, device=input_ids.device)).unsqueeze(0)\n",
+        "        x = cols + pos\n",
+        "        x = self.col_block(x)\n",
+        "        pooled = x.mean(dim=1)\n",
+        "\n",
+        "        return self.classifier(pooled)\n",
+        "\n",
+        "\n",
+        "NUM_COLUMNS = int(train_input_ids.shape[1])\n",
+        "NUM_LABELS = len(label2id)\n",
+        "\n",
+        "model = MultiColumnRobertaClassifier(\n",
+        "    model_name=MODEL_NAME,\n",
+        "    num_columns=NUM_COLUMNS,\n",
+        "    num_labels=NUM_LABELS,\n",
+        ").to(DEVICE)\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "    batch_input_ids, batch_attention_mask, _ = next(iter(train_loader))\n",
+        "    logits = model(batch_input_ids.to(DEVICE), batch_attention_mask.to(DEVICE))\n",
+        "    print(\"logits:\", tuple(logits.shape))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Train and validate\n",
+        "\n",
+        "This cell fine‑tunes the whole model end‑to‑end (RoBERTa + column‑attention layers), evaluates on the validation split each epoch, and saves the best checkpoint by validation accuracy.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[10], line 69\u001b[0m\n\u001b[1;32m     66\u001b[0m     logits \u001b[38;5;241m=\u001b[39m model(input_ids_b, attention_mask_b)\n\u001b[1;32m     67\u001b[0m     loss \u001b[38;5;241m=\u001b[39m loss_fn(logits, labels_b)\n\u001b[0;32m---> 69\u001b[0m \u001b[43mscaler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscale\u001b[49m\u001b[43m(\u001b[49m\u001b[43mloss\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     70\u001b[0m torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mclip_grad_norm_(model\u001b[38;5;241m.\u001b[39mparameters(), GRAD_CLIP_NORM)\n\u001b[1;32m     71\u001b[0m scaler\u001b[38;5;241m.\u001b[39mstep(optimizer)\n",
+            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torch/_tensor.py:625\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    615\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    616\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    617\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    618\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    623\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    624\u001b[0m     )\n\u001b[0;32m--> 625\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    626\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    627\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torch/autograd/__init__.py:354\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    349\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    351\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    352\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    353\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 354\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    355\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    356\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    357\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    358\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    359\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs_tuple\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    360\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    361\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    362\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torch/autograd/graph.py:841\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    839\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[1;32m    840\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 841\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    842\u001b[0m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    843\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    844\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    845\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ],
+      "source": [
+        "loss_fn = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.AdamW(model.parameters(), lr=LR, weight_decay=WEIGHT_DECAY)\n",
+        "\n",
+        "total_steps = max(1, EPOCHS * len(train_loader))\n",
+        "warmup_steps = int(WARMUP_RATIO * total_steps)\n",
+        "\n",
+        "scheduler = get_linear_schedule_with_warmup(\n",
+        "    optimizer,\n",
+        "    num_warmup_steps=warmup_steps,\n",
+        "    num_training_steps=total_steps,\n",
+        ")\n",
+        "\n",
+        "scaler = torch.cuda.amp.GradScaler(enabled=torch.cuda.is_available())\n",
+        "\n",
+        "\n",
+        "@torch.no_grad()\n",
+        "def evaluate(m: nn.Module, loader: DataLoader, num_labels: int):\n",
+        "    m.eval()\n",
+        "\n",
+        "    total_loss = 0.0\n",
+        "    total_correct = 0\n",
+        "    total_n = 0\n",
+        "    conf = torch.zeros((num_labels, num_labels), dtype=torch.long)\n",
+        "\n",
+        "    for input_ids_b, attention_mask_b, labels_b in loader:\n",
+        "        input_ids_b = input_ids_b.to(DEVICE)\n",
+        "        attention_mask_b = attention_mask_b.to(DEVICE)\n",
+        "        labels_b = labels_b.to(DEVICE)\n",
+        "\n",
+        "        with torch.cuda.amp.autocast(enabled=scaler.is_enabled()):\n",
+        "            logits = m(input_ids_b, attention_mask_b)\n",
+        "            loss = loss_fn(logits, labels_b)\n",
+        "\n",
+        "        total_loss += float(loss.item()) * int(labels_b.shape[0])\n",
+        "        preds = logits.argmax(dim=1)\n",
+        "        total_correct += int((preds == labels_b).sum().item())\n",
+        "        total_n += int(labels_b.shape[0])\n",
+        "\n",
+        "        for t, p in zip(labels_b.view(-1), preds.view(-1)):\n",
+        "            conf[int(t), int(p)] += 1\n",
+        "\n",
+        "    avg_loss = total_loss / max(1, total_n)\n",
+        "    acc = total_correct / max(1, total_n)\n",
+        "    return avg_loss, acc, conf\n",
+        "\n",
+        "\n",
+        "BEST_CKPT_PATH = Path(\"best_multicolumn_roberta.pt\")\n",
+        "\n",
+        "best_val_acc = -1.0\n",
+        "\n",
+        "for epoch in range(1, EPOCHS + 1):\n",
+        "    model.train()\n",
+        "\n",
+        "    running_loss = 0.0\n",
+        "    running_correct = 0\n",
+        "    running_n = 0\n",
+        "\n",
+        "    for input_ids_b, attention_mask_b, labels_b in train_loader:\n",
+        "        input_ids_b = input_ids_b.to(DEVICE)\n",
+        "        attention_mask_b = attention_mask_b.to(DEVICE)\n",
+        "        labels_b = labels_b.to(DEVICE)\n",
+        "\n",
+        "        optimizer.zero_grad(set_to_none=True)\n",
+        "\n",
+        "        with torch.cuda.amp.autocast(enabled=scaler.is_enabled()):\n",
+        "            logits = model(input_ids_b, attention_mask_b)\n",
+        "            loss = loss_fn(logits, labels_b)\n",
+        "\n",
+        "        scaler.scale(loss).backward()\n",
+        "        torch.nn.utils.clip_grad_norm_(model.parameters(), GRAD_CLIP_NORM)\n",
+        "        scaler.step(optimizer)\n",
+        "        scaler.update()\n",
+        "        scheduler.step()\n",
+        "\n",
+        "        running_loss += float(loss.item()) * int(labels_b.shape[0])\n",
+        "        preds = logits.argmax(dim=1)\n",
+        "        running_correct += int((preds == labels_b).sum().item())\n",
+        "        running_n += int(labels_b.shape[0])\n",
+        "\n",
+        "    train_loss = running_loss / max(1, running_n)\n",
+        "    train_acc = running_correct / max(1, running_n)\n",
+        "\n",
+        "    val_loss, val_acc, _ = evaluate(model, val_loader, NUM_LABELS)\n",
+        "\n",
+        "    print(\n",
+        "        f\"Epoch {epoch}/{EPOCHS} | \"\n",
+        "        f\"train_loss={train_loss:.4f} train_acc={train_acc:.3f} | \"\n",
+        "        f\"val_loss={val_loss:.4f} val_acc={val_acc:.3f}\"\n",
+        "    )\n",
+        "\n",
+        "    if val_acc > best_val_acc:\n",
+        "        best_val_acc = val_acc\n",
+        "        torch.save(\n",
+        "            {\n",
+        "                \"model_state_dict\": model.state_dict(),\n",
+        "                \"label2id\": label2id,\n",
+        "                \"feature_columns\": FEATURE_COLUMNS,\n",
+        "                \"model_name\": MODEL_NAME,\n",
+        "                \"max_len\": MAX_LEN,\n",
+        "            },\n",
+        "            BEST_CKPT_PATH,\n",
+        "        )\n",
+        "\n",
+        "print(\"\\nbest_val_acc:\", best_val_acc)\n",
+        "print(\"saved:\", BEST_CKPT_PATH.resolve())\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Load best checkpoint + show confusion matrix\n",
+        "\n",
+        "This final cell reloads the best saved model (by validation accuracy), re-runs evaluation on the validation set, and visualizes the confusion matrix over `junior/mid/senior`.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ckpt = torch.load(BEST_CKPT_PATH, map_location=DEVICE)\n",
+        "model.load_state_dict(ckpt[\"model_state_dict\"])\n",
+        "\n",
+        "val_loss, val_acc, conf = evaluate(model, val_loader, NUM_LABELS)\n",
+        "\n",
+        "print(\"val_loss:\", val_loss)\n",
+        "print(\"val_acc:\", val_acc)\n",
+        "print(\"confusion_matrix:\\n\", conf)\n",
+        "\n",
+        "fig, ax = plt.subplots(figsize=(6, 6))\n",
+        "im = ax.imshow(conf.numpy(), cmap=\"Blues\")\n",
+        "\n",
+        "ax.set_xticks(range(NUM_LABELS))\n",
+        "ax.set_yticks(range(NUM_LABELS))\n",
+        "ax.set_xticklabels([id2label[i] for i in range(NUM_LABELS)], rotation=45, ha=\"right\")\n",
+        "ax.set_yticklabels([id2label[i] for i in range(NUM_LABELS)])\n",
+        "\n",
+        "for i in range(NUM_LABELS):\n",
+        "    for j in range(NUM_LABELS):\n",
+        "        ax.text(j, i, int(conf[i, j]), ha=\"center\", va=\"center\")\n",
+        "\n",
+        "ax.set_xlabel(\"Predicted\")\n",
+        "ax.set_ylabel(\"True\")\n",
+        "ax.set_title(\"Multi‑Column RoBERTa – Confusion Matrix (Validation)\")\n",
+        "fig.colorbar(im, ax=ax)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
+      ]
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
