--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 88,
    "id": "2045b438",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 89,
    "id": "9a19494b",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 90,
    "id": "f3940143",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 91,
    "id": "1e01a4cb",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "79be9273",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 93,
    "id": "b7817397",
    "metadata": {},
    "outputs": [],
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 94,
    "id": "8d26c162",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 95,
    "id": "5a8cf8c5",
    "metadata": {},
    "outputs": [],
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 96,
    "id": "1bdb668f",
    "metadata": {},
    "outputs": [],
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 97,
    "id": "b553f6e2",
    "metadata": {},
    "outputs": [],
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 98,
    "id": "9912de9e",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 99,
    "id": "3e562e7e",
    "metadata": {},
    "outputs": [],
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 100,
    "id": "7b3ed737",
    "metadata": {},
    "outputs": [],
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 101,
    "id": "a1b68f24",
    "metadata": {},
    "outputs": [
@@ -912,13 +912,23 @@
    "source": [
     "# Save to the specified location\n",
     "balanced_df.to_csv('./Baseline/cleaned_resumes.csv', index=False)\n",
-    "balanced_df.to_csv('./Smaller Models//cleaned_resumes.csv', index=False)\n",
+    "balanced_df.to_csv('./Smaller Models/cleaned_resumes.csv', index=False)\n",
+    "balanced_df.to_csv('./Big Models/cleaned_resumes.csv', index=False)\n",
+    "\n",
     "\n",
     "\n",
     "print(f\"Saved {len(balanced_df)} records to ./Baseline/cleaned_resumes.csv\")\n",
     "print(f\"\\nExperience level distribution:\")\n",
     "print(balanced_df['experience_level'].value_counts())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c547d46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -937,7 +947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
