added more results

--- a/Big Models/zero_shot_openrouter_openai_gpt-5.ipynb
+++ b/Big Models/zero_shot_openrouter_openai_gpt-5.ipynb
@@ -56,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Columns to include in the prompt (exclude target and personal info)\n",
-    "EXCLUDE_COLS = {\"experience_level\", \"name\", \"email\", \"linkedin\", \"github\"}\n",
+    "EXCLUDE_COLS = {\"experience_level\", \"name\", \"email\", \"linkedin\", \"github\", \"summary_count\", \"total_experience_time\", \"last_experience_time\", \"last_experience_only\"}\n",
     "\n",
     "def build_resume_text(row):\n",
     "    \"\"\"Build resume text from row data.\"\"\"\n",
