--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 1,
    "id": "2045b438",
    "metadata": {},
    "outputs": [
@@ -142,68 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 2,
    "id": "9a19494b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 4817 records\n",
-      "Created 11 columns\n",
-      "\n",
-      "Column names: ['name', 'email', 'summary', 'linkedin', 'github', 'experience', 'education', 'skills', 'projects', 'certifications', 'summary_count']\n",
-      "\n",
-      "First few rows:\n",
-      "           name         email  \\\n",
-      "0       Unknown       Unknown   \n",
-      "1       Unknown       Unknown   \n",
-      "2  Not Provided  Not Provided   \n",
-      "3       Unknown       Unknown   \n",
-      "4                               \n",
-      "\n",
-      "                                             summary      linkedin  \\\n",
-      "0  Python Developer with experience in Python, Te...       Unknown   \n",
-      "1  Experienced Operations Manager with expertise ...           NaN   \n",
-      "2  Software Proficiency in various languages and ...  Not Provided   \n",
-      "3  Experienced Operations Manager with expertise ...           NaN   \n",
-      "4                                                                    \n",
-      "\n",
-      "         github                                         experience  \\\n",
-      "0       Unknown  [{\"company\": \"Fresher\", \"company_info\": {\"indu...   \n",
-      "1           NaN  [{\"company\": \"Delta Controls, Dubai FZCO\", \"co...   \n",
-      "2  Not Provided  [{\"company\": \"Parkar Consulting and Labs\", \"co...   \n",
-      "3           NaN  [{\"company\": \"Delta Controls, Dubai FZCO\", \"co...   \n",
-      "4                [{\"company\": \"Atos Syntel\", \"company_info\": {\"...   \n",
-      "\n",
-      "                                           education  \\\n",
-      "0  [{\"degree\": {\"level\": \"ME\", \"field\": \"Computer...   \n",
-      "1  [{\"degree\": {\"level\": \"B.E\", \"field\": \"Electro...   \n",
-      "2  [{\"degree\": {\"level\": \"B.E.\", \"field\": \"Not Pr...   \n",
-      "3  [{\"degree\": {\"level\": \"B.E\", \"field\": \"Electro...   \n",
-      "4  [{\"degree\": {\"level\": \"Bachelor of Engineering...   \n",
-      "\n",
-      "                                              skills  \\\n",
-      "0  {\"technical\": {\"programming_languages\": [{\"nam...   \n",
-      "1  {\"technical\": {\"project_management\": [{\"name\":...   \n",
-      "2  {\"technical\": {\"programming_languages\": [{\"nam...   \n",
-      "3  {\"technical\": {\"project_management\": [{\"name\":...   \n",
-      "4  {\"technical\": {\"programming_languages\": [{\"nam...   \n",
-      "\n",
-      "                                            projects  \\\n",
-      "0  [{\"name\": \"Unknown\", \"description\": \"Unknown\",...   \n",
-      "1  [{\"name\": \"FGP/WPMP\", \"description\": \"Led syst...   \n",
-      "2  [{\"name\": \"FPGA Implementation\", \"description\"...   \n",
-      "3  [{\"name\": \"FGP/WPMP\", \"description\": \"Led syst...   \n",
-      "4                                                 []   \n",
-      "\n",
-      "                                      certifications  summary_count  \n",
-      "0                                                 \"\"            100  \n",
-      "1                                                 \"\"            232  \n",
-      "2                                                 \"\"            167  \n",
-      "3                                                 \"\"            232  \n",
-      "4  \"{\\\"name\\\": \\\"ESD Program\\\", \\\"issuer\\\": \\\"Zen...              0  \n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mclean_resume_data\u001b[39m(record):\n\u001b[32m      4\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[33;03m    Extract and clean resume data - just parse fields simply.\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
      ]
     }
    ],
@@ -278,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "id": "f3940143",
    "metadata": {},
    "outputs": [],
@@ -304,18 +255,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "id": "1e01a4cb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total rows left after deletion: 4634\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Total rows left after deletion: {len(df)}\")"
    ]
@@ -327,7 +270,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from datetime import datetime\n",
     "import json\n",
     "\n",
@@ -365,7 +307,8 @@
     "            \"total_experience_time\": \"0 Years\",\n",
     "            \"last_experience_time\": \"0 Years\",\n",
     "            \"target_job_title\": \"\",\n",
-    "            \"updated_experience_json\": exp_json\n",
+    "            \"updated_experience_json\": exp_json,\n",
+    "            \"target_experience_json\": \"\"\n",
     "        }\n",
     "\n",
     "    if not isinstance(experiences, list) or len(experiences) == 0:\n",
@@ -375,7 +318,8 @@
     "            \"total_experience_time\": \"0 Years\",\n",
     "            \"last_experience_time\": \"0 Years\",\n",
     "            \"target_job_title\": \"\",\n",
-    "            \"updated_experience_json\": exp_json\n",
+    "            \"updated_experience_json\": exp_json,\n",
+    "            \"target_experience_json\": \"\"\n",
     "        }\n",
     "\n",
     "    # Preprocess: normalize levels, calculate durations and update duration field\n",
@@ -448,6 +392,13 @@
     "    # Extract target job title BEFORE any modifications\n",
     "    target_job_title = most_recent_exp.get('title', '')\n",
     "    \n",
+    "    # Create a copy of the target experience WITHOUT the level field for the target_experience column\n",
+    "    target_experience_copy = {}\n",
+    "    if 'title' in most_recent_exp:\n",
+    "        target_experience_copy['title'] = most_recent_exp['title']\n",
+    "    if 'responsibilities' in most_recent_exp:\n",
+    "        target_experience_copy['responsibilities'] = most_recent_exp['responsibilities']\n",
+    "    \n",
     "    # -------------------------------------------------------------\n",
     "    # Clear the 'level' ONLY from the chosen experience\n",
     "    # -------------------------------------------------------------\n",
@@ -473,7 +424,8 @@
     "        \"total_experience_time\": f\"{round(total_experience_years, 2)} Years\",\n",
     "        \"last_experience_time\": f\"{round(last_experience_years, 2)} Years\",\n",
     "        \"target_job_title\": target_job_title,\n",
-    "        \"updated_experience_json\": json.dumps(cleaned_experiences)\n",
+    "        \"updated_experience_json\": json.dumps(cleaned_experiences),\n",
+    "        \"target_experience_json\": json.dumps(target_experience_copy)\n",
     "    }\n",
     "\n",
     "# Now apply to the DataFrame\n",
@@ -485,12 +437,14 @@
     "df['last_experience_time'] = df_results.apply(lambda x: x['last_experience_time'])\n",
     "df['job title'] = df_results.apply(lambda x: x['target_job_title'])\n",
     "# Update the experience column with the modified JSON (calculated duration + cleared level)\n",
-    "df['experience'] = df_results.apply(lambda x: x.get('updated_experience_json', df['experience'].iloc[0]))\n"
+    "df['experience'] = df_results.apply(lambda x: x.get('updated_experience_json', df['experience'].iloc[0]))\n",
+    "# Add the target experience in a separate column\n",
+    "df['target_experience'] = df_results.apply(lambda x: x.get('target_experience_json', ''))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "id": "b7817397",
    "metadata": {},
    "outputs": [],
@@ -575,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "id": "8d26c162",
    "metadata": {},
    "outputs": [],
@@ -655,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "id": "5a8cf8c5",
    "metadata": {},
    "outputs": [],
@@ -740,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "id": "1bdb668f",
    "metadata": {},
    "outputs": [],
@@ -810,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "id": "b553f6e2",
    "metadata": {},
    "outputs": [],
@@ -821,18 +775,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "id": "9912de9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4626\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Remove all rows where the 'summary' column is empty or contains only whitespace\n",
     "df = df[df['summary'].astype(str).str.strip() != '']\n",
@@ -853,18 +799,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "id": "3a58811a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 4626 existing summaries from generated_summaries.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -886,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
    "id": "4209d884",
    "metadata": {},
    "outputs": [],
@@ -909,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "id": "ddad489a",
    "metadata": {},
    "outputs": [],
@@ -966,18 +904,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "id": "b3f71b96",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipped generation - using loaded summaries\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not SKIP_GENERATION:\n",
     "    print(f\"Generating summaries for {len(df)} rows...\")\n",
@@ -1000,18 +930,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": null,
    "id": "5df53335",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Summaries loaded from file - no need to save\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save generated summaries to a JSON file for reuse (only if newly generated)\n",
     "if not SKIP_GENERATION:\n",
@@ -1026,32 +948,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "id": "cbd7bffd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample generated summaries:\n",
-      "================================================================================\n",
-      "\n",
-      "[1] **Results-driven Java Developer with 10+ years of expertise in building and maintaining robust Java-based web applications.** Proficient in **Spring Framework, Hibernate, and JSP/Servlet development**, with hands-on experience designing scalable backend solutions and integrating seamless front-end f...\n",
-      "--------------------------------------------------------------------------------\n",
-      "\n",
-      "[2] **Results-Driven Project Manager with 11+ Years of Expertise in Vendor Transition, Automation, and Agile-Driven Quality Assurance**\n",
-      "\n",
-      "With a strong foundation in **project management, automation testing, and Agile methodologies**, I specialize in leading high-impact transitions—from pre-transition pl...\n",
-      "--------------------------------------------------------------------------------\n",
-      "\n",
-      "[3] **Skilled Advocate with 13+ Years of Legal Expertise & Multidisciplinary Proficiency**\n",
-      "\n",
-      "With a robust background spanning **13 years** in legal advocacy, I specialize in representing clients before courts, tribunals, and international boards, ensuring their rights are protected across **criminal, pe...\n",
-      "--------------------------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Update the summary column with new generated summaries\n",
     "df[\"summary\"] = df.index.map(new_summaries)\n",
@@ -1069,18 +969,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "id": "a31edb56",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed seniority keywords from summaries\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Remove seniority level keywords from summaries to avoid data leakage\n",
     "import re\n",
@@ -1100,19 +992,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "id": "6e42c98d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columns reordered:\n",
-      "['experience', 'projects', 'skills', 'summary', 'education', 'job title', 'total_experience_time', 'last_experience_time', 'summary_count', 'last_experience_only', 'experience_level', 'name', 'email', 'linkedin', 'github']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reorder columns to put most informative features first\n",
     "# Put most informative resume parts first (only if they exist)\n",
@@ -1143,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "id": "3e562e7e",
    "metadata": {},
    "outputs": [],
@@ -1154,19 +1037,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "id": "7b3ed737",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Senior experience range: 10.1 Years to 18.81 Years\n",
-      "Mid experience range: 6.37 Years to 19.44 Years\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pick 700 records of a senior, 700 of a mid, 700 of a junior, and save that file in ./Baseline/cleaned_resumes.csv\n",
     "# For seniors and mids: pick the top 700 most experienced (by total_experience_time)\n",
@@ -1202,25 +1076,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "id": "a1b68f24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved 2100 records to ./Baseline/cleaned_resumes.csv\n",
-      "\n",
-      "Experience level distribution:\n",
-      "experience_level\n",
-      "senior    700\n",
-      "mid       700\n",
-      "junior    700\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save to the specified location\n",
     "balanced_df.to_csv('./Baseline/cleaned_resumes.csv', index=False)\n",
@@ -1251,7 +1110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
